提交所有剩余的项目文件更改
- 更新CMakeLists.txt配置
- 修复TempratureTrendItem.qml组件
- 更新components/qmldir模块配置

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,9 @@ qt_add_qml_module(appWeatherAPP
         QMLFrontend/components/TempratureTrend/TempratureTrendItem.qml
         QMLFrontend/components/TempratureTrend/TempratureTrendItemDelegate.qml
         QMLFrontend/components/TempratureTrend/TemperatureChart.qml
+        QMLFrontend/components/DetailedInfo/DetailedInfoItem.qml
+        QMLFrontend/components/DetailedInfo/DetailedInfoLabel.qml
+        QMLFrontend/components/DetailedInfo/qmldir
         QMLFrontend/components/qmldir
         QMLFrontend/views/TodayWeatherView.qml
         QMLFrontend/views/TemperatureTrendView.qml
